adding room handler
