# route/route.go
@@ -12,6 +12,7 @@ type Handlers struct {
 	SnackHandler *handler.SnackHandler
 	//tambahin buat handerl lain
 	UserHandler *handler.UserHandler
+	RoomHandler *handler.RoomHandler
 }
 
 func SetupRoutes(e *echo.Echo, h *Handlers) {
@@ -21,7 +22,9 @@ func SetupRoutes(e *echo.Echo, h *Handlers) {
 	})
 
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
+
 	e.POST("/register", h.UserHandler.Register)
 
 	e.GET("/snacks", h.SnackHandler.GetAllSnacks)
+	e.GET("/rooms", h.RoomHandler.GetAllRooms)
 }
